# pyconnect

./: .drone.yml  .flake8  .gitignore  .pre-commit-config.yaml  .travis.yml  CHANGELOG.md  LICENSE  Makefile  Pipfile  README.md  docker-compose.yml  flake8-requirements.txt  hosts.template  kafka.Dockerfile  pyproject.toml  requirements.txt  setup.py  test-requirements.txt  test_pypi.sh
.github/workflows/: RELEASE.md  publish.yml  release-prep.yml  testing.yml
commithooks/: pre-commit  pre-commit-flake.py  pre-commit-hook  prepare-commit-msg
examples/file_sink/: Dockerfile  file_sink.py
examples/file_source/: Dockerfile  file_source.py
pyconnect/: __init__.py  avroparser.py  config.py  core.py  pyconnectsink.py  pyconnectsinkfile.py  pyconnectsource.py
scripts/: init.sh
src/pyconnect/: __init__.py  avroparser.py  config.py  core.py  errors.py  pyconnectsink.py  pyconnectsource.py
test/: __init__.py  _test_examples.py  conftest.py  docker-compose.yml  message_utils.py  pyconnectsinkfile.py  test_avroparser.py  test_config.py  test_core.py  test_e2e_fixtures.py  test_end_to_end.py  test_examples.py  test_kafka_api.py  test_pyconnectsink.py  test_pyconnectsinkfile.py  test_pyconnectsource.py  test_sink_e2e.py  test_sink_integration.py  test_source_e2e.py  test_source_integration.py  testenv-docker-compose.yml  utils.py
